--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Email Checker</title>
+  <style>
+    #result img {
+      max-width: 300px;
+      margin-top: 10px;
+    }
+    #result p {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
   <h1>Введите ваш email</h1>
   <input type="email" id="emailInput" placeholder="example@example.com">
   <button onclick="checkEmail()">Проверить</button>
 
-  <div id="result" style="margin-top:20px;"></div>
+  <div id="result"></div>
 
   <script>
     let emails = [];
@@ -21,15 +31,21 @@
       .catch(err => console.error('Ошибка загрузки email:', err));
 
     function checkEmail() {
-      const input = document.getElementById('emailInput').value.trim();
+      const input = document.getElementById('emailInput').value.trim().toLowerCase();
       const resultDiv = document.getElementById('result');
 
-      if (emails.includes(input)) {
-        // Заменяем запрещенные символы для имени файла
-        const filename = input.replace(/[@.]/g, '_') + '.png';
-        resultDiv.innerHTML = `<img src="images/${filename}" alt="Email Image" width="300">`;
+      if (!input) {
+        resultDiv.innerHTML = '<p>Введите email.</p>';
+        return;
+      }
+
+      // Преобразуем email в имя файла
+      const filename = input.replace(/[@.]/g, '_') + '.png';
+
+      if (emails.includes(filename)) {
+        resultDiv.innerHTML = `<img src="images/${filename}" alt="Email Image">`;
       } else {
-        resultDiv.innerHTML = `<p>Email не найден.</p>`;
+        resultDiv.innerHTML = '<p>Email не найден.</p>';
       }
     }
   </script>
