--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Email Checker</title>
-  <style>
-    #result img {
-      max-width: 300px;
-      margin-top: 10px;
-    }
-    #result p {
-      color: red;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Введите ваш email</h1>
