--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Email Checker</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Введите ваш email</h1>
-  <input type="email" id="emailInput" placeholder="example@example.com">
-  <button onclick="checkEmail()">Проверить</button>
+  <div class="container">
+    <!-- Левая колонка: форма -->
+    <div class="left-panel">
+      <h1>Введите ваш email</h1>
+      <input type="email" id="emailInput" placeholder="example@example.com">
+      <button onclick="checkEmail()">Проверить</button>
+    </div>
 
-  <div id="result"></div>
+    <!-- Правая колонка: результат -->
+    <div class="right-panel">
+      <div id="result"></div>
+    </div>
+  </div>
 
   <script>
     let emails = [];
@@ -30,7 +38,6 @@
         return;
       }
 
-      // Преобразуем email в имя файла
       const filename = input.replace(/[@.]/g, '_') + '.png';
 
       if (emails.includes(filename)) {
